--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "beta": 1.0,
   "gamma": 1.0,
   "fairnessCap": 30,
+  "vehiclesPerStep": 2,
   "lanePriorities": {
     "NORTH": { "LEFT": 1.0, "STRAIGHT": 1.0 },
     "SOUTH": { "LEFT": 1.0, "STRAIGHT": 1.0 },
